# ttSchweizer

./: .gitignore  .pdm-python  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  ttSchweizerHttp.py
.github/workflows/: publish-dockerimage.yml
app/: ttSchweizerHttp.py
