[project]
name = "ttSchweizer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Volker Lorrmann", email = "volker.lorrmann@gmail.com"},
]
dependencies = [
    "Flask==2.1.2",
    "Flask-Login==0.6.1",
    "Flask-SQLAlchemy==2.5.1",
    "weasyprint==55.0",
    "Flask-WeasyPrint==0.6",
    "werkzeug==2.1.2",
    "SQLAlchemy==1.4.0",
    "lxml==4.9.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
